--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,40 @@
     --bg-color: #2F303A;
     --bg-color-item: #EEEEEE;
     --buttons-bg-color: #F5F4FA;
-
-
+    --border-box: #eeeeee;
 }
-
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: var(--primary-bg-color) ;
-   
+    background-color: var(--primary-bg-color) ;   
 }
+.container {
+    width: 1200px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin: 0 auto;
+}
+
+p,h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+}
+
+img { 
+    display: block;
+}
+
+/* Header  */
+
+.header {
+    background-color: var(--primary-bg-color);
+    cursor: pointer;
+    border-bottom: 1px solid var(--border-box);  
+}
+
+.container.header{
+    display: flex;
+    align-items: center;
+}
+
 .logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -22,31 +47,39 @@ body {
     line-height: 1.19;
     color: var(--accent-color);
     text-decoration: none;
+   
 }
-.header {
-    background-color: var(--primary-bg-color);
-    cursor: pointer;
-}
-.main-section {
-    background-color: var(--bg-color);
-    color: var(--primary-bg-color);
-}
+
 .studio {
     color: var(--primary-text-color);
 }
 
-.main-title {
-    font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: var(--primary-bg-color);
+ul {
+    margin: 0;
+    padding-left: 0;
+    list-style: none; 
+}
+.site-nav {
+  align-items: center;
+  display: flex;
 }
 
-ul {
-    list-style: none;
+.site-nav-list,
+.contacts {
+  display: flex; 
+  margin: 0;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
+
+
+.site-nav-list {
+    margin-left: 93px;
+}
+.site-nav-list li+li {
+    margin-left: 50px;
+}
+
 .nav-link {
     font-family: 'Roboto';
     font-style: normal;
@@ -62,18 +95,20 @@ ul {
     color: var(--accent-color);
 }
 
-.nav-link-current {
-    font-family: 'Roboto';
+.nav-link-current {   
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--accent-color);
     text-decoration: none;
+   
 }
-.mail,
-.phone {
-    font-family: 'Roboto';
+.nav-link,
+.nav-link-current {
+    position: relative;
+}
+.link {
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -81,22 +116,70 @@ ul {
     letter-spacing: 0.02em;
     color: var(--title-text-color);
     text-decoration: none;
-}
-.mail:hover, 
-.phone:hover {
+    
+} 
+.link:hover,
+.link:focus {
     color: var(--accent-color);
 }
+
+.contacts li+li {
+   margin-left: 50px;
+}
+.contacts {
+    margin-left: auto;
+}
+
+/* Main section */
+
+.main-section {
+    text-align: center;
+    background-color: var(--bg-color);
+    color: var(--primary-bg-color);
+    padding-top: 200px;
+padding-bottom: 200px;
+
+}
+.main-title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--primary-bg-color);
+    width: 696px;
+    margin: 0 auto 30px auto;
+}
+
 .button {
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-    display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
     color: var(--primary-bg-color);
     background-color: var(--accent-color);
+    border-radius: 4px;
+    padding: 10px 32px;
+    cursor: pointer;
 }
+
+/* Features */
+
+.features-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.features {
+    display: flex;
+    padding-left: 0;
+} 
+.features li{
+    width: 270px;
+}
+
 .features-title {
     font-weight: 700;
     font-size: 14px;
@@ -110,30 +193,78 @@ ul {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: var(--title-text-color);
+    color: var(--title-text-color);  
 }
+
 
 .title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    color: var(--primary-text-color);
+    color: var(--primary-text-color);  
+    margin-top: 0;
+    margin-bottom: 50px;
+    text-align: center;
 }
-.our-team-section {
-    background-color: var(--buttons-bg-color);
+.title.hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
-.our-team {
-    background-color: var(--primary-bg-color);
+/* Our work */
+.work-section,
+.project-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
+.work-list li {
+    display: inline-block;
+    margin-right: -3px;
+}
+.work-list li+li {
+    margin-left: 30px;
+}
+/* Our team*/
+
+.our-team-section {
+    background-color: var(--buttons-bg-color); 
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.our-team {
+    background-color: var(--buttons-bg-color);
+    display: flex;
+    padding-left: 0;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.our-team li+li {
+    margin-left: 30px;
+}
+
+.team-box {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 .team-title {
     font-weight: 500;
-font-size: 16px;
-line-height: 1.19;
-
-letter-spacing: 0.03em;
-color: var(--primary-text-color);
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color); 
+    margin-bottom: 10px; 
+    margin-top: 0;
+    text-align: center;
 }
 
 .team-text {
@@ -142,9 +273,19 @@ color: var(--primary-text-color);
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
+    text-align: center;
 }
+
+/* Footer */
+
 .footer {
-    background: var(--bg-color);
+    background: var(--bg-color); 
+    padding-top: 60px;
+    padding-bottom: 60px; 
+}
+.logo.footer-logo {
+    display: block;
+    margin-bottom: 20px;
 }
 
 .footer-studio {
@@ -152,24 +293,48 @@ color: var(--primary-text-color);
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    color: var(--primary-bg-color);
+    color: var(--primary-bg-color); 
+    
 }
+
 .location {
      font-style: normal;
     font-size: 14px;
     line-height: 1.71;
-
     color: var(--primary-bg-color);
-    text-decoration: none;
+    text-decoration: none;   
 }
-.footer-mail,
-.footer-phone {
+.location:hover,
+.location:focus {
+    color: var(--accent-color);
+}
+.footer-contacts {
+    padding-left: 0;
+}
+.footer-contacts li+li {
+    margin-top: 9px;
+}
+
+.footer-link {
     font-style: normal;
     font-size: 14px;
     line-height: 1.71;
     color: rgba(255, 255, 255, 0.6);
-    text-decoration: none;
+    text-decoration: none;   
 }
+.footer-link:hover,
+.footer-link:focus {
+    color: var(--accent-color);
+}
+
+
+/* portfolio */
+.portfolio-buttons {
+    margin: 0 auto 50px;
+    display: flex;
+    justify-content: center;
+}
+
 .portfolio-button {
     background: var(--buttons-bg-color);
     color: var(--primary-text-color);
@@ -178,21 +343,48 @@ color: var(--primary-text-color);
     line-height: 1.63; 
     letter-spacing: 0.03em;
     cursor: pointer;
+    text-align: center;
+    padding: 0 22px;
+    margin-left: 8px;
+    
 }
 .portfolio-button:hover, 
 .portfolio-button:focus {
     color: var(--primary-bg-color);
     background: var(--accent-color);
 }
-.our-portfolio-item {
-    background-color: var(--bg-color-item);
+.our-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    cursor: pointer;
 }
+.our-portfolio li:not(:nth-of-type(3n)) {
+    margin-right: 30px;
+}
+.our-portfolio li:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+}
+
+.portfolio-link {
+    text-decoration: none;
+}
+.project-box {
+    padding: 20px 24px;
+    border-bottom: 1px solid var(--border-box);
+    border-right:1px solid var(--border-box) ;
+    border-left: 1px solid var(--border-box);
+    
+}
+
 .our-portfolio-title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--primary-text-color);
+    
+  
+  
 }
 .our-portfolio-text {
     font-weight: 400;
